[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=3.0.1",
    "pygraphviz>=1.14",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]
